--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.14.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/config": "^0.0.41",
     "@types/cors": "^2.8.12",
